<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.search.SearchActivity">

    <RelativeLayout android:id="@+id/layoutSearchBar"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/editTextSearch"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="24dp"
            android:hint="@string/hint_search"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_toStartOf="@id/imageViewButtonClearSearch"
            android:textColor="?attr/colorPrimary"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatImageView
            android:visibility="gone"
            app:tint="?attr/colorControlNormal"
            android:id="@+id/imageViewButtonClearSearch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:src="@drawable/ic_clear_search" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerViewMovieList"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearchBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_margin="32dp"
        android:visibility="gone"
        android:id="@+id/layoutNoSearchResultsIndicator"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            app:tint="?attr/colorControlNormal"
            android:src="@drawable/ic_nothing_found"
            android:layout_width="32dp"
            android:layout_height="32dp" />

        <TextView android:text="@string/no_search_results"
            android:layout_marginTop="12dp"
            android:textColor="?attr/colorControlNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:visibility="gone"
        android:layout_margin="32dp"
        android:id="@+id/layoutSearchErrorIndicator"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            app:tint="@color/error"
            android:src="@drawable/ic_error"
            android:layout_width="32dp"
            android:layout_height="32dp" />

        <TextView android:text="@string/error_search"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textColor="@color/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/buttonRetrySearch"
            android:text="@string/retry"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>