<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.movie_detail.MovieDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="24dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewMoviePoster"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageViewMoviePoster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <ProgressBar
                        android:id="@+id/progressBarLoading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <FrameLayout
                        android:id="@+id/viewErrorIndicatorCover"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/error_light"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_error" />

                    </FrameLayout>

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/error_cannot_load_movie"
                android:textColor="@color/error"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewMovieTitle"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/cardViewMoviePoster" />

            <TextView
                android:id="@+id/textViewMovieYear"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewMoviePlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewFavoriteButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        app:cardBackgroundColor="?attr/colorPrimaryVariant"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/buttonChangeMovieFavorite"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:gravity="center"
                            android:focusable="true">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/imageViewFavoriteButtonIcon"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_heart_empty"
                                android:tint="@color/purple_500" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/favorite"
                                android:textColor="@color/purple_500"
                                android:textStyle="bold" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.cardview.widget.CardView>

                    <ProgressBar
                        android:id="@+id/progressBarFavoriteButtonLoading"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:indeterminateTint="@color/purple_500" />

                </FrameLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="?attr/colorPrimaryVariant"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/buttonHideMovieInSearch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center"
                        android:focusable="true">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_hide"
                            android:tint="@color/purple_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/hide_in_search"
                            android:textColor="@color/purple_500"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/section_header_details" />

            <androidx.appcompat.widget.LinearLayoutCompat android:id="@+id/layoutMovieRuntimeContainer"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_timer"
                    app:tint="?attr/colorControlNormal" />

                <TextView android:id="@+id/textViewMovieRuntime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="?attr/colorControlNormal" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat android:id="@+id/layoutMovieDirectorContainer"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_person"
                    app:tint="?attr/colorControlNormal" />

                <TextView android:id="@+id/textViewMovieDirector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="?attr/colorControlNormal" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat android:id="@+id/layoutMovieAwardsContainer"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_trophy"
                    app:tint="?attr/colorControlNormal" />

                <TextView android:id="@+id/textViewMovieAwards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="?attr/colorControlNormal" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView android:id="@+id/textViewMovieGenres"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</RelativeLayout>